--- a/apps/web/src/app/(pages)/(technical-records)/create/details/create-technical-record-details.page.html
+++ b/apps/web/src/app/(pages)/(technical-records)/create/details/create-technical-record-details.page.html
@@ -1,4 +1,4 @@
-<app-error-summary></app-error-summary>
+<app-error-summary [errors]="errorService.extract(form)"></app-error-summary>
 
 <h1 class="govuk-heading-l">Create a new technical record</h1>
 
